--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="./css/main.scss">
 </head>
 <body>
-
     <div class="container">
         <h1>Z-Components</h1>
         
         <hr>
 
         <h2>Input</h2>
-    
         <z-input label="Text input"></z-input>
+        <z-input label="Text input" value="default value"></z-input>
 
         <hr>
 
         <h2>Textarea</h2>
-        <z-textarea></z-textarea>
+        <z-textarea label="Textarea input"></z-textarea>
+        <z-textarea label="Textarea input" value="default value"></z-textarea>
     </div>
 
     <script src="./js/main.js"></script>
