Add autoresize textarea

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
         <h2>Textarea</h2>
         <z-textarea label="Textarea input"></z-textarea>
         <z-textarea label="Textarea input" value="default value"></z-textarea>
+        <z-textarea label="Textarea input with autoresize" autoresize></z-textarea>
     </div>
 
     <script src="./js/main.js"></script>
