Add checkbox input

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,15 @@
         <z-textarea label="Textarea input"></z-textarea>
         <z-textarea label="Textarea input" value="default value"></z-textarea>
         <z-textarea label="Textarea input with autoresize" autoresize></z-textarea>
+
+        <hr>
+
+        <h2>Checkbox</h2>
+        <z-checkbox label="checkbox input"></z-checkbox>
+        <z-checkbox label="checkbox input with label left" label-position="left"></z-checkbox>
+        <z-checkbox label="checkbox input checked" checked></z-checkbox>
+        <z-checkbox label="checkbox input disabled" disabled></z-checkbox>
+        <z-checkbox label="checkbox input checked & disabled" checked disabled></z-checkbox>
     </div>
 
     <script src="./js/main.js"></script>
