Refactor z-checkbox with lit-element

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
         <h2>Checkbox</h2>
         <z-checkbox label="checkbox input"></z-checkbox>
-        <z-checkbox label="checkbox input with label left" label-position="left"></z-checkbox>
+        <z-checkbox label="checkbox input with label left" right></z-checkbox>
         <z-checkbox label="checkbox input checked" checked></z-checkbox>
         <z-checkbox label="checkbox input disabled" disabled></z-checkbox>
         <z-checkbox label="checkbox input checked & disabled" checked disabled></z-checkbox>
