--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,14 @@
 
         <h2>Input</h2>
         <z-input label="Text input"></z-input>
-        <z-input label="Text input" value="default value"></z-input>
+        <z-input label="Text input with default value" value="default value"></z-input>
+        <z-input label="Text input disabled" value="default value" disabled></z-input>
 
         <hr>
 
         <h2>Textarea</h2>
         <z-textarea label="Textarea input"></z-textarea>
-        <z-textarea label="Textarea input" value="default value"></z-textarea>
+        <z-textarea label="Textarea input with default value" value="default value"></z-textarea>
         <z-textarea label="Textarea input with autoresize" autoresize></z-textarea>
 
         <hr>
