Rename as former name was taken on npm

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Z-Components</title>
+    <title>Z-Web-Components</title>
     <link rel="stylesheet" href="./css/main.scss">
 </head>
 <body>
     <div class="container">
-        <h1>Z-Components</h1>
+        <h1>Z-Web-Components</h1>
         
         <hr>
 
