Add z-toggle element

--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,21 @@
 
         <h2>Checkbox</h2>
         <z-checkbox label="checkbox input"></z-checkbox>
-        <z-checkbox label="checkbox input with label left" right></z-checkbox>
+        <z-checkbox label="checkbox input after label" right></z-checkbox>
         <z-checkbox label="checkbox input checked" checked></z-checkbox>
         <z-checkbox label="checkbox input disabled" disabled></z-checkbox>
         <z-checkbox label="checkbox input checked & disabled" checked disabled></z-checkbox>
+
+        <hr>
+
+        <h2>Toggle</h2>
+
+        <z-toggle label="toggle input"></z-toggle>
+        <z-toggle label="toggle input after label" right></z-toggle>
+        <z-toggle label="toggle input active" active></z-toggle>
+        <z-toggle label="toggle input with custom inside labels" onlabel="ON" offlabel="OFF"></z-toggle>
+        <z-toggle label="toggle input disabled" disabled></z-toggle>
+        <z-toggle label="toggle input active & disabled" active disabled></z-toggle>
     </div>
 
     <script src="./js/main.js"></script>
