--- a/src/index.html
+++ b/src/index.html
@@ -37,13 +37,22 @@
         <hr>
 
         <h2>Toggle</h2>
-
         <z-toggle label="toggle input"></z-toggle>
         <z-toggle label="toggle input after label" right></z-toggle>
         <z-toggle label="toggle input active" active></z-toggle>
         <z-toggle label="toggle input with custom inside labels" onlabel="ON" offlabel="OFF"></z-toggle>
         <z-toggle label="toggle input disabled" disabled></z-toggle>
         <z-toggle label="toggle input active & disabled" active disabled></z-toggle>
+
+        <hr>
+
+        <h2>Radio</h2>
+        <z-radio-group name="radio-demo" value="3">
+            <z-radio label="radio input" value="1"></z-radio>
+            <z-radio label="radio input after label" value="2" right></z-radio>
+            <z-radio label="radio input checked" value="3"></z-radio>
+            <z-radio label="radio input disabled" value="4" disabled></z-radio>
+        </z-radio-group>
     </div>
 
     <script src="./js/main.js"></script>
