input new types & input + textarea readonly, required & design stuff...

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,21 @@
         <z-input label="Text input"></z-input>
         <z-input label="Text input with default value" value="default value"></z-input>
         <z-input label="Text input disabled" value="disabled" disabled></z-input>
+        <z-input label="Text input required" required></z-input>
+        <z-input label="Text input readonly" value="readonly" readonly></z-input>
+        <z-input label="Color input" type="color"></z-input>
+        <z-input label="Date input" type="date"></z-input>
+        <z-input label="DateTime Local input" type="datetime-local"></z-input>
+        <z-input label="Email input" type="email"></z-input>
+        <z-input label="Month input" type="month"></z-input>
+        <z-input label="Number input" type="number"></z-input>
+        <z-input label="Password input" type="password"></z-input>
+        <z-input label="Search input" type="search"></z-input>
+        <z-input label="Tel input" type="tel"></z-input>
+        <z-input label="Time input" type="time"></z-input>
+        <z-input label="Url input" type="url"></z-input>
+        <z-input label="Week input" type="week"></z-input>
+        <z-input label="Yolo input" type="yolo"></z-input>
 
         <hr>
 
@@ -24,6 +39,8 @@
         <z-textarea label="Textarea input with default value" value="default value"></z-textarea>
         <z-textarea label="Textarea input disabled" value="disabled" disabled></z-textarea>
         <z-textarea label="Textarea input with autoresize" autoresize value="Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ipsa optio dolorem iusto numquam inventore vitae accusamus fugit impedit aperiam pariatur consectetur nostrum excepturi! Aliquam, neque a tempora magni obcaecati provident ipsam. Repellendus, dolores natus nemo praesentium sequi aliquid consectetur voluptate magnam fuga illum tempora odio nobis ut qui repudiandae porro nam blanditiis nisi distinctio quasi rem fugit, eos magni? Consectetur, dolor deserunt. Nemo culpa ratione aliquid! Nihil, corporis reprehenderit, quasi, velit veniam modi doloremque alias ipsum eaque magni amet? A magni placeat voluptas tenetur fuga commodi, temporibus possimus quos dolor deleniti fugit ratione consequatur? Labore nemo, molestias modi ipsa commodi accusamus cum dolores, enim soluta temporibus debitis libero ut porro aperiam dolor fugit dolore neque itaque! Provident, cupiditate ex. Atque laborum explicabo ipsa eligendi, quod dignissimos accusantium repudiandae voluptatibus quis harum sunt molestiae in dolores cupiditate."></z-textarea>
+        <z-textarea label="Textarea input required" required></z-textarea>
+        <z-textarea label="Textarea input readonly" value="readonly" readonly></z-textarea>
 
         <hr>
 
