Add z-tab & z-tab-group components

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,21 @@
             <z-radio label="radio input checked" value="3"></z-radio>
             <z-radio label="radio input disabled" value="4" disabled></z-radio>
         </z-radio-group>
+
+        <hr>
+
+        <h2>Tabs</h2>
+        <z-tab-group>
+            <z-tab label="tab-1">Lorem ipsum dolor <a href="https://benjamin.caradeuc.info">sit</a> amet consectetur adipisicing elit. Suscipit, facere!</z-tab>
+            <z-tab label="tab-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, delectus minima nulla sed magni facilis tempore ipsam laborum quam maxime.</z-tab>
+            <z-tab label="tab-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea modi iste numquam nobis sunt repellendus doloremque inventore, reiciendis at. Dolore, at. Mollitia voluptatem, officia rerum repudiandae ex aperiam totam. Harum?</z-tab>
+        </z-tab-group>
+
+        <z-tab-group vertical>
+            <z-tab label="tab-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere!</z-tab>
+            <z-tab label="tab-2" active>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, delectus minima nulla sed magni facilis tempore ipsam laborum quam maxime.</z-tab>
+            <z-tab label="tab-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea modi iste numquam nobis sunt repellendus doloremque inventore, reiciendis at. Dolore, at. Mollitia voluptatem, officia rerum repudiandae ex aperiam totam. Harum?</z-tab>
+        </z-tab-group>
     </div>
 
     <script src="./js/main.js"></script>
